# rt-rs

./: .gitignore  Cargo.toml
nff/: balls1.nff  balls2.nff  balls3.nff  balls5.nff  jacks1.nff  mountain.nff  teapot.nff  temple.nff
rayimgui/: Cargo.toml
rayimgui/src/: main.rs
rayimgui/src/utils/: imguirenderer.rs  mod.rs  textureui.rs  window.rs
rtcon/: Cargo.toml
rtcon/src/: main.rs
rtgui/: Cargo.toml
rtgui/src/: guirenderer.rs  main.rs
rtlib/: Cargo.toml
rtlib/src/: lib.rs
rtlib/src/cameras/: camera.rs  mod.rs  normalcamera.rs
rtlib/src/hitables/: aabb.rs  bvhnode.rs  cube.rs  cylinder.rs  flipnormals.rs  hitablelist.rs  hitrecord.rs  medium.rs  mod.rs  rotatex.rs  rotatey.rs  rotatez.rs  sphere.rs  translate.rs  triangle.rs  xyrect.rs  xzrect.rs  yzrect.rs
rtlib/src/materials/: dialectric.rs  diffuselight.rs  isotropic.rs  lambertian.rs  material.rs  metal.rs  mod.rs  scatterresult.rs
rtlib/src/pdfs/: cosinepdf.rs  hitablepdf.rs  mixturepdf.rs  mod.rs  orthonormalbase.rs
rtlib/src/render/: color.rs  consolerenderer.rs  mod.rs  nffparser.rs  perpixelrenderer.rs  pixel.rs  pixelarraybuffer.rs  pixelbuffer.rs  pixeldata.rs  ray.rs  raytracer.rs  renderconfig.rs  renderer.rs  renderexec.rs  samplingraytracer.rs  scene.rs  scenegenerator.rs
rtlib/src/stats/: mod.rs
rtlib/src/textures/: checkertexture.rs  colortexture.rs  imagetexture.rs  mod.rs  noisetexture.rs  perlin.rs  vectornoisetexture.rs  vectorperlin.rs
scenes/: Cargo.toml
scenes/src/: cornellboxscene.rs  lib.rs  manyspheresscene.rs
