[package]
name = "rayimgui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtlib = { path = "../rtlib" }
scenes = { path = "../scenes" }
imgui-glow-renderer = { git = "https://github.com/imgui-rs/imgui-rs" }
imgui = { git = "https://github.com/imgui-rs/imgui-rs" }
imgui-winit-support = { git = "https://github.com/imgui-rs/imgui-rs" }
glow = "0.12.0"
memoffset = "0.9"
glutin = "0.31.1"
glutin-winit = "0.4.2"
image = "0.23"
raw-window-handle = "0.5.0"
winit = { version = "0.29.13", features = ["rwh_05"] }
cgmath = "0.18.0"
serde = "1.0.197"
num-format = "0.4.4"
rand = "0.8.5"
structopt = { version = "0.3", features = ["paw"] }
paw = "1.0"
log4rs = "*"
log = "*"
chrono = "*"
rayon = "*"
