[package]
name = "rtgui"
version = "0.1.0"
authors = ["Mark Zuber <mark@zube.com>"]
edition = "2021"
default-run = "rtgui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtlib = { path = "../rtlib" }
scenes = { path = "../scenes" }
piston_window = "*"
chrono = "*"
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
log4rs = "*"
log = "*"
